--- a/code/android/src/main/android/res/layout/overview.xml
+++ b/code/android/src/main/android/res/layout/overview.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:weightSum="100" android:orientation="vertical">
+              android:weightSum="100" android:orientation="vertical">    "
     <ListView android:id="@id/android:list" android:layout_width="fill_parent"
-              android:layout_height="fill_parent" android:cacheColorHint="@android:color/transparent"
+              android:layout_height="wrap_content" android:cacheColorHint="@android:color/transparent"
               android:divider="#FFFFFF" android:dividerHeight="0px"/>
 
     <Button android:text="New transaction"
