--- a/code/android/src/main/android/res/layout/overview.xml
+++ b/code/android/src/main/android/res/layout/overview.xml
@@ -9,12 +9,14 @@
                  android:stretchColumns="1">
         <LinearLayout android:layout_height="wrap_content" android:layout_width="0dip"
                       android:orientation="horizontal">
-            <Button android:layout_height="wrap_content" android:layout_width="wrap_content"
+            <Button android:id="@+id/button_overview_minus" android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
                     android:text="&lt;-" android:layout_weight="1"/>
             <Button android:id="@+id/button_overview_pickDate" android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:text="Mars 2011" android:layout_weight="2"/>
-            <Button android:layout_height="wrap_content" android:layout_width="wrap_content"
+            <Button android:id="@+id/button_overview_plus" android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
                     android:text="-&gt;" android:layout_weight="1"/>
         </LinearLayout>
         <ListView android:id="@id/android:list" android:layout_weight="1" android:layout_width="0dip"
