--- a/code/android/src/main/android/res/menu/optionmenu.xml
+++ b/code/android/src/main/android/res/menu/optionmenu.xml
@@ -3,8 +3,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_categories"
           android:title="@string/categories"/>
-    <item
-            android:title="Placeholder"/>
+    <item android:id="@+id/menu_pie_chart"
+          android:title="Pie chart"/>
     <item
             android:title="Placeholder"/>
     <item
