--- a/code/android/src/main/android/res/menu/overviewmenu.xml
+++ b/code/android/src/main/android/res/menu/overviewmenu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_categories"
-          android:title="@string/categories"/>
+    <item android:id="@+id/menu_pie_chart"
+          android:title="Pie chart"/>
 </menu>
