--- a/android/src/main/android/res/layout/edittransaction.xml
+++ b/android/src/main/android/res/layout/edittransaction.xml
@@ -69,7 +69,7 @@
                       android:id="@+id/suggested_tag"/>
         </TableRow>
     </TableLayout>
-    <Button android:text="Save"
+    <Button android:text="@string/save"
             android:id="@+id/edittransaction_button_edittransaction"
             android:layout_weight="0"
             android:layout_width="fill_parent"
