--- a/android/src/main/android/res/menu/overviewmenu.xml
+++ b/android/src/main/android/res/menu/overviewmenu.xml
@@ -2,5 +2,5 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_pie_chart"
-          android:title="Pie chart"/>
+          android:title="@string/pie_chart"/>
 </menu>
