--- a/android/src/main/android/res/layout/transactionrow.xml
+++ b/android/src/main/android/res/layout/transactionrow.xml
@@ -15,46 +15,31 @@
                      android:layout_height="fill_parent"
                      android:stretchColumns="1">
             <TableRow>
-                <TextView android:layout_weight="1" android:layout_width="0dip"
-                          android:text="@string/transaction_date"
-                          android:padding="3dip"
-                          android:textStyle="bold"
-                          style="@style/DefaultTextFont"/>
-                <TextView android:id="@+id/trow_tv_date"
-                          android:layout_weight="1" android:layout_width="0dip"
-                          android:padding="3dip"
-                          style="@style/DefaultTextFont"/>
-            </TableRow>
-            <TableRow>
-                <TextView android:layout_weight="1" android:layout_width="0dip"
-                          android:text="@string/transaction_text"
-                          android:padding="3dip"
-                          android:textStyle="bold"
-                          style="@style/DefaultTextFont"/>
-                <TextView android:id="@+id/trow_tv_text"
-                          android:layout_weight="1" android:layout_width="0dip"
-                          android:padding="3dip"
-                          style="@style/DefaultTextFont"/>
-            </TableRow>
-            <TableRow>
-                <TextView android:layout_weight="1" android:layout_width="0dip"
-                          android:text="@string/category" android:padding="3dip"
-                          android:textStyle="bold"
-                          style="@style/DefaultTextFont"/>
                 <TextView android:id="@+id/trow_tv_category"
                           android:layout_weight="1" android:layout_width="0dip"
-                          android:padding="3dip"
-                          style="@style/DefaultTextFont"/>
-            </TableRow>
-            <TableRow>
-                <TextView android:layout_weight="1" android:layout_width="0dip"
-                          android:text="@string/transaction_amount"
-                          android:padding="3dip"
+                          android:padding="0dip"
                           android:textStyle="bold"
+                          android:textSize="15sp"
                           style="@style/DefaultTextFont"/>
                 <TextView android:id="@+id/trow_tv_amount"
                           android:layout_weight="1" android:layout_width="0dip"
-                          android:padding="3dip"
+                          android:paddingLeft="3dip"
+                          android:textStyle="bold"
+                          android:textSize="15sp"
+                          android:gravity="right"
+                          style="@style/DefaultTextFont"/>
+            </TableRow>
+            <TableRow>
+                <TextView android:id="@+id/trow_tv_text"
+                          android:layout_weight="1" android:layout_width="0dip"
+                          android:paddingLeft="0dip"
+                          android:textSize="10sp"
+                          style="@style/DefaultTextFont"/>
+                <TextView android:id="@+id/trow_tv_date"
+                          android:layout_weight="1" android:layout_width="0dip"
+                          android:paddingLeft="3dip"
+                          android:textSize="10sp"
+                          android:gravity="right"
                           style="@style/DefaultTextFont"/>
             </TableRow>
         </TableLayout>
