--- a/android/src/main/android/res/layout/transactions.xml
+++ b/android/src/main/android/res/layout/transactions.xml
@@ -2,10 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical" android:layout_width="fill_parent"
               android:layout_height="fill_parent" android:background="@drawable/background3">
-    <ListView android:id="@id/android:list" android:layout_width="fill_parent"
-              android:layout_height="fill_parent" android:cacheColorHint="@android:color/transparent"
-              android:divider="#FFFFFF" android:dividerHeight="0px"/>
-    <TextView android:id="@id/android:empty"
-              android:layout_width="fill_parent" android:layout_height="fill_parent"
-              android:text="@string/transactions_no_items"/>
+    <LinearLayout android:layout_width="fill_parent" android:layout_weight="1"
+                  android:layout_height="wrap_content">
+        <ListView android:id="@id/android:list" android:layout_width="fill_parent"
+                  android:layout_height="fill_parent" android:cacheColorHint="@android:color/transparent"
+                  android:divider="#FFFFFF" android:dividerHeight="0px"/>
+        <TextView android:id="@id/android:empty"
+                  android:layout_width="fill_parent" android:layout_height="fill_parent"
+                  android:text="@string/transactions_no_items"/>
+    </LinearLayout>
+    <TextView android:id="@+id/tv_transactioncount" android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              style="@style/DefaultTextFont" android:textSize="10sp" android:layout_weight="0"
+              android:gravity="center"></TextView>
 </LinearLayout>
