--- a/android/src/main/android/res/layout/settings.xml
+++ b/android/src/main/android/res/layout/settings.xml
@@ -2,7 +2,12 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:focusable="true" android:focusableInTouchMode="true">
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
+              android:text="@string/username" style="@style/DefaultTextFont"/>
+    <EditText android:id="@+id/et_username" android:layout_height="wrap_content"
+              android:layout_width="fill_parent"></EditText>
 
 </LinearLayout>
