--- a/android/src/main/android/res/layout/settings.xml
+++ b/android/src/main/android/res/layout/settings.xml
@@ -5,9 +5,22 @@
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:focusable="true" android:focusableInTouchMode="true">
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
-              android:text="@string/username" style="@style/DefaultTextFont"/>
-    <EditText android:id="@+id/et_username" android:layout_height="wrap_content"
-              android:layout_width="fill_parent"></EditText>
+    <TableLayout android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_weight="1">
+        <TableRow>
+            <TextView android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dip"
+                      android:text="@string/username" android:textStyle="bold" style="@style/DefaultTextFont"
+                      android:padding="3dip"/>
+            <EditText android:id="@+id/et_username" android:layout_height="wrap_content"
+                      android:layout_weight="1" android:layout_width="0dip"/>
+        </TableRow>
+    </TableLayout>
+
+    <Button android:text="@string/save"
+            android:id="@+id/button_settings_save"
+            android:layout_weight="0"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"/>
 
 </LinearLayout>
