New and improved design! Changed the background of the application. Added button drawables for red, green and blue button. Added a postit drawable. Changed text color to black in layouts. postit drawable is used as background for data in several layouts. Added method for changing tabHost style/design in MenuActivity.

--- a/android/src/main/android/res/layout/category.xml
+++ b/android/src/main/android/res/layout/category.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:background="@drawable/background3"
+              android:background="@drawable/background4"
               android:focusable="true" android:focusableInTouchMode="true">
     <TableLayout android:layout_width="fill_parent" android:layout_weight="1"
                  android:layout_height="wrap_content"
@@ -49,6 +49,7 @@
     </TableLayout>
     <Button android:text="@string/save"
             android:id="@+id/button_newcategory_save"
+            android:background="@drawable/button_green"
             android:layout_weight="0"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
