--- a/android/src/main/android/res/layout/synchronize.xml
+++ b/android/src/main/android/res/layout/synchronize.xml
@@ -6,20 +6,21 @@
         android:orientation="vertical">
     <TableLayout android:layout_width="fill_parent" android:layout_weight="1"
                  android:layout_height="wrap_content"
-                 android:stretchColumns="1">
+                 android:stretchColumns="1" android:background="@drawable/postit"
+                 android:padding="20dip">
 
         <TableRow>
             <TextView android:layout_weight="0.5"
                       android:layout_width="wrap_content"
                       android:padding="3dip"
-                      android:textStyle="bold" style="@style/DefaultTextFont"
+                      android:textStyle="bold" android:textColor="@android:color/black"
                       android:layout_height="wrap_content"
                       android:text="@string/last_synchronized">
             </TextView>
             <TextView android:layout_weight="1"
                       android:layout_width="wrap_content"
                       android:padding="3dip"
-                      style="@style/DefaultTextFont"
+                      android:textStyle="bold" android:textColor="@android:color/black"
                       android:layout_height="wrap_content"
                       android:gravity="right"
                       android:id="@+id/last_synchronized">
@@ -29,14 +30,14 @@
             <TextView android:layout_weight="0.5"
                       android:layout_width="wrap_content"
                       android:padding="3dip"
-                      android:textStyle="bold" style="@style/DefaultTextFont"
+                      android:textStyle="bold" android:textColor="@android:color/black"
                       android:layout_height="wrap_content"
                       android:text="@string/internal_t_count">
             </TextView>
             <TextView android:layout_weight="1"
                       android:layout_width="wrap_content"
                       android:padding="3dip"
-                      style="@style/DefaultTextFont"
+                      android:textStyle="bold" android:textColor="@android:color/black"
                       android:layout_height="wrap_content"
                       android:gravity="right"
                       android:id="@+id/internal_t_count">
@@ -46,14 +47,14 @@
             <TextView android:layout_weight="0.5"
                       android:layout_width="wrap_content"
                       android:padding="3dip"
-                      android:textStyle="bold" style="@style/DefaultTextFont"
+                      android:textStyle="bold" android:textColor="@android:color/black"
                       android:layout_height="wrap_content"
                       android:text="@string/internal_tag_count">
             </TextView>
             <TextView android:layout_weight="1"
                       android:layout_width="wrap_content"
                       android:padding="3dip"
-                      style="@style/DefaultTextFont"
+                      android:textStyle="bold" android:textColor="@android:color/black"
                       android:layout_height="wrap_content"
                       android:gravity="right"
                       android:id="@+id/internal_tag_count">
@@ -63,14 +64,14 @@
             <TextView android:layout_weight="0.5"
                       android:layout_width="wrap_content"
                       android:padding="3dip"
-                      android:textStyle="bold" style="@style/DefaultTextFont"
+                      android:textStyle="bold" android:textColor="@android:color/black"
                       android:layout_height="wrap_content"
                       android:text="@string/unsynced_count">
             </TextView>
             <TextView android:layout_weight="1"
                       android:layout_width="wrap_content"
                       android:padding="3dip"
-                      style="@style/DefaultTextFont"
+                      android:textStyle="bold" android:textColor="@android:color/black"
                       android:layout_height="wrap_content"
                       android:gravity="right"
                       android:id="@+id/unsynced_count">
@@ -80,14 +81,14 @@
             <TextView android:layout_weight="0.5"
                       android:layout_width="wrap_content"
                       android:padding="3dip"
-                      android:textStyle="bold" style="@style/DefaultTextFont"
+                      android:textStyle="bold" android:textColor="@android:color/black"
                       android:layout_height="wrap_content"
                       android:text="@string/untagged_count">
             </TextView>
             <TextView android:layout_weight="1"
                       android:layout_width="wrap_content"
                       android:padding="3dip"
-                      style="@style/DefaultTextFont"
+                      android:textStyle="bold" android:textColor="@android:color/black"
                       android:layout_height="wrap_content"
                       android:gravity="right"
                       android:id="@+id/untagged_count">
@@ -98,12 +99,18 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/clear_db"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:background="@drawable/button_red"
             android:layout_weight="0">
     </Button>
     <Button android:id="@+id/syncButton"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/synchronize"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:background="@drawable/button_green"
             android:layout_weight="0">
     </Button>
 </LinearLayout>
