--- a/android/src/main/android/res/layout/transactionrow.xml
+++ b/android/src/main/android/res/layout/transactionrow.xml
@@ -20,27 +20,27 @@
                           android:padding="0dip"
                           android:textStyle="bold"
                           android:textSize="15sp"
-                          style="@style/DefaultTextFont"/>
+                          android:textColor="@android:color/black"/>
                 <TextView android:id="@+id/trow_tv_amount"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="3dip"
                           android:textStyle="bold"
                           android:textSize="15sp"
                           android:gravity="right"
-                          style="@style/DefaultTextFont"/>
+                          android:textColor="@android:color/black"/>
             </TableRow>
             <TableRow>
                 <TextView android:id="@+id/trow_tv_text"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="0dip"
                           android:textSize="10sp"
-                          style="@style/DefaultTextFont"/>
+                          android:textColor="@android:color/black"/>
                 <TextView android:id="@+id/trow_tv_date"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="3dip"
                           android:textSize="10sp"
                           android:gravity="right"
-                          style="@style/DefaultTextFont"/>
+                          android:textColor="@android:color/black"/>
             </TableRow>
         </TableLayout>
 
