--- a/android/src/main/android/res/layout/transactions.xml
+++ b/android/src/main/android/res/layout/transactions.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical" android:layout_width="fill_parent"
-              android:layout_height="fill_parent" android:background="@drawable/background3">
+              android:layout_height="fill_parent" android:background="@drawable/background4">
     <LinearLayout android:layout_width="fill_parent" android:layout_weight="1"
-                  android:layout_height="wrap_content">
+                  android:layout_height="wrap_content"
+                  android:padding="20dip"
+                  android:background="@drawable/postit">
         <ListView android:id="@id/android:list" android:layout_width="fill_parent"
                   android:layout_height="fill_parent" android:cacheColorHint="@android:color/transparent"
                   android:divider="#FFFFFF" android:dividerHeight="0px"/>
